Neovim lint